Add regional Uma Musume components

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11134,4 +11134,6 @@
 	<item component="ComponentInfo{com.bilibili.bangdream.aligames/com.bilibili.star.bili.PermissionActivity}" drawable="bang_dream" />
 	<item component="ComponentInfo{com.kakaogames.bangdreamkr/com.kakaogame.KGUnityPlayerActivity}" drawable="bang_dream" />
 	<item component="ComponentInfo{icu.nullptr.applistdetector/icu.nullptr.applistdetector.MainActivity}" drawable="applist_detector" />
+	<item component="ComponentInfo{com.komoe.kmumamusumegp/jp.co.cygames.umamusume_activity.UmamusumeActivity}" drawable="uma_musume" />
+	<item component="ComponentInfo{com.kakaogames.umamusume/kr.co.kakaogames.umamusume_activity.UmamusumeActivity}" drawable="uma_musume" />
 </resources>
