Additional components for Honkai Impact 3rd

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11136,4 +11136,7 @@
 	<item component="ComponentInfo{icu.nullptr.applistdetector/icu.nullptr.applistdetector.MainActivity}" drawable="applist_detector" />
 	<item component="ComponentInfo{com.komoe.kmumamusumegp/jp.co.cygames.umamusume_activity.UmamusumeActivity}" drawable="uma_musume" />
 	<item component="ComponentInfo{com.kakaogames.umamusume/kr.co.kakaogames.umamusume_activity.UmamusumeActivity}" drawable="uma_musume" />
+	<item component="ComponentInfo{com.miHoYo.bh3rdJP/com.miHoYo.overridenativeactivity.OverrideNativeActivity}" drawable="honkai_impact_third" />
+	<item component="ComponentInfo{com.miHoYo.bh3tw/com.miHoYo.overridenativeactivity.OverrideNativeActivity}" drawable="honkai_impact_third" />
+	<item component="ComponentInfo{com.miHoYo.bh3korea/com.miHoYo.overridenativeactivity.OverrideNativeActivity}" drawable="honkai_impact_third" />
 </resources>
