--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11141,4 +11141,5 @@
 	<item component="ComponentInfo{com.miHoYo.bh3korea/com.miHoYo.overridenativeactivity.OverrideNativeActivity}" drawable="honkai_impact_third" />
 	<item component="ComponentInfo{com.YoStarJP.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
 	<item component="ComponentInfo{com.YoStarKR.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
+	<item component="ComponentInfo{com.klab.lovelive.allstars/com.klab.lovelive.allstars.MainActivity}" drawable="love_liveas" />
 </resources>
