--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11142,4 +11142,5 @@
 	<item component="ComponentInfo{com.YoStarJP.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
 	<item component="ComponentInfo{com.YoStarKR.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
 	<item component="ComponentInfo{com.klab.lovelive.allstars/com.klab.lovelive.allstars.MainActivity}" drawable="love_liveas" />
+	<item component="ComponentInfo{jp.co.atm.smile/jp.co.atm.smile.MainActivity}" drawable="starlight" />
 </resources>
