--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -145,6 +145,7 @@
 	<item drawable="universal_copy" />
 	<item drawable="vita3k" />
 	<item drawable="watchdog" />
+	<item drawable="neo_backup" />
 
 	<category title="Alts" />
 	<item drawable="_4pda_alt_1" />
@@ -373,6 +374,7 @@
 	<item drawable="n_plus_launcher_alt_1" />
 	<item drawable="neko_alt_1" />
 	<item drawable="neo_backup_alt_1" />
+	<item drawable="neo_backup_alt_2" />
 	<item drawable="neo_launcher_alt_1" />
 	<item drawable="neo_store_alt_1" />
 	<item drawable="nequi_alt_1" />
