escape characters in FAQ

--- a/app/src/main/res/values/dashboard_faqs.xml
+++ b/app/src/main/res/values/dashboard_faqs.xml
@@ -69,7 +69,7 @@
             If your launcher is not listed but Delta is compatible with it
             (see Play Store description for supported launchers),
             you can apply Delta manually from your launcher settings.</item>
-        <item>You can open the navigation drawer then open \"Icons\"</item>
+        <item>You can open the navigation drawer then open \"Icons\".</item>
         <item>Just tap the icon. A preview dialog will appear with a bigger image and the complete icon name.</item>
         <item>It depends on which launcher you used. Not every launcher supports icon editing.
        	    Mostly, you can edit an icon by tapping and holding the icon, or double tapping it.</item>
@@ -83,15 +83,15 @@
         <item>Open settings, scroll down, and choose \"Report Bugs\".</item>
         <item>\"Report Bugs\" is used to report bugs related to the icon pack, not the dashboard.</item>
         <item>Not every launcher supports direct application, and some of them can\'t be accessed directly from the dashboard.
-      	    You can apply this icon pack manually from your launcher's settings.</item>
-        <item>When you use \"Set Wallpaper\" directly from the app, it will be downloaded to the application's cache,
+      	    You can apply this icon pack manually from your launcher\'s settings.</item>
+        <item>When you use \"Set Wallpaper\" directly from the app, it will be downloaded to the application\'s cache,
       	    then the dashboard app will try to apply it. Applying will take some time, and needs a huge amount of RAM for a short time.
       	    Black screen errors may appear because your phone doesn\'t have enough free RAM to process the wallpaper.
       	    Restarting your phone will fix this problem. After restarting, your phone will have more RAM available.
             Alternatively, you can open the downloaded wallpaper from your gallery and set it as your wallpaper from there.</item>
         <item>Open Muzei, choose Delta, and go to settings. You will see an option to load downloaded wallpapers only.
             However, you will need to download wallpapers from the dashboard first.</item>
-        <item>If a wallpaper is already downloaded, it will be loaded from your phone's memory automatically.
+        <item>If a wallpaper is already downloaded, it will be loaded from your phone\'s memory automatically.
             Muzei won\'t keep downloading it when the wallpaper changes, but you will need to download wallpapers from the dashboard first.</item>
         <item>Open Dashboard and download the wallpapers that you want to use in Muzei.
             Open Muzei settings, then choose Load Downloaded Wallpapers Only.</item>
