Added PurpleTv icon

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11204,4 +11204,5 @@
 	<item component="ComponentInfo{com.smartrent.resident/com.smartrent.resident.MainActivity}" drawable="smartrent" />
 	<item component="ComponentInfo{com.cleverraven.cataclysmdda.experimental/com.cleverraven.cataclysmdda.SplashScreen}" drawable="cataclysm_dda_x" />
 	<item component="ComponentInfo{com.tour.pgatour/com.pgatour.evolution.SplashActivity}" drawable="pga_tour" />
+	<item component="ComponentInfo{tv.orange/tv.twitch.android.app.core.LandingActivity}" drawable="purpletv" />
 </resources>
