--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -136,6 +136,7 @@
 	<item drawable="priority_pass" />
 	<item drawable="prisma3d" />
 	<item drawable="private_location" />
+	<item drawable="purpletv" />
 	<item drawable="qserv" />
 	<item drawable="quick_cursor" />
 	<item drawable="railway_station_photos" />
@@ -6105,6 +6106,7 @@
 	<item drawable="pure_tuber" />
 	<item drawable="pure_writer" />
 	<item drawable="purrfect_cats" />
+	<item drawable="purpletv" />
 	<item drawable="push_for_better" />
 	<item drawable="pushbullet" />
 	<item drawable="pushover" />
