--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5,6 +5,7 @@
 
 	<category title="New" />
 	<item drawable="_8bitdo" />
+	<item drawable="actu_patrimoine" />
 	<item drawable="ad_free" />
 	<item drawable="adblock_browser" />
 	<item drawable="adblock_fast" />
@@ -65,6 +66,7 @@
 	<item drawable="emacs" />
 	<item drawable="endless_sky" />
 	<item drawable="escapepod" />
+	<item drawable="essentiel_pro_lcl" />
 	<item drawable="etesync" />
 	<item drawable="exif_thumbnail_adder" />
 	<item drawable="feudal_tactics" />
@@ -98,16 +100,22 @@
 	<item drawable="john_gba" />
 	<item drawable="jojoy" />
 	<item drawable="kakao_webtoon" />
+	<item drawable="lclmasante" />
+	<item drawable="lcl_assurances" />
+	<item drawable="lcl_bourse" />
+	<item drawable="lcl_monem_mobile" />
 	<item drawable="lexus" />
 	<item drawable="libra" />
 	<item drawable="linktree" />
 	<item drawable="lucky_financial" />
 	<item drawable="luminous_black_poweramp_skin" />
 	<item drawable="m_pesa" />
+	<item drawable="ma_protection_maison_lcl" />
 	<item drawable="mastercard" />
 	<item drawable="medilog" />
 	<item drawable="meitu" />
 	<item drawable="memrise" />
+	<item drawable="mes_comptes_lcl" />
 	<item drawable="metamorfosis" />
 	<item drawable="microsoft_365" />
 	<item drawable="microsoft_auth" />
@@ -124,6 +132,7 @@
 	<item drawable="nunti" />
 	<item drawable="octohide_vpn" />
 	<item drawable="ourocard" />
+	<item drawable="paiement_mobile" />
 	<item drawable="paypal_honey" />
 	<item drawable="pbz_mobile" />
 	<item drawable="permission_manager_x" />
@@ -136,6 +145,7 @@
 	<item drawable="priority_pass" />
 	<item drawable="prisma3d" />
 	<item drawable="private_location" />
+	<item drawable="pro_entreprises_lcl" />
 	<item drawable="purpletv" />
 	<item drawable="qserv" />
 	<item drawable="quick_cursor" />
@@ -1688,6 +1698,7 @@
 	<item drawable="activity_manager" />
 	<item drawable="activitywatch" />
 	<item drawable="actor_detector" />
+	<item drawable="actu_patrimoine" />
 	<item drawable="actual" />
 	<item drawable="ad_free" />
 	<item drawable="ad_silence" />
@@ -3387,6 +3398,7 @@
 	<item drawable="es_dictionary" />
 	<item drawable="es_file_explorer" />
 	<item drawable="escapepod" />
+	<item drawable="essentiel_pro_lcl" />
 	<item drawable="eset_mobile_security_antivirus" />
 	<item drawable="esewa" />
 	<item drawable="esound" />
@@ -4375,6 +4387,10 @@
 	<item drawable="kaiteki" />
 	<item drawable="kakao__talk" />
 	<item drawable="kakao_webtoon" />
+	<item drawable="lclmasante" />
+	<item drawable="lcl_assurances" />
+	<item drawable="lcl_bourse" />
+	<item drawable="lcl_monem_mobile" />
 	<item drawable="kakaomap" />
 	<item drawable="kakaopage" />
 	<item drawable="kalender_indonesia" />
@@ -4802,6 +4818,7 @@
 	<item drawable="marvel_snap" />
 	<item drawable="marvel_unlimited" />
 	<item drawable="massive" />
+	<item drawable="ma_protection_maison_lcl" />
 	<item drawable="mastercard" />
 	<item drawable="mastodon" />
 	<item drawable="maswear" />
@@ -4900,6 +4917,7 @@
 	<item drawable="metadataremover" />
 	<item drawable="metal" />
 	<item drawable="metamask" />
+	<item drawable="mes_comptes_lcl" />
 	<item drawable="metamorfosis" />
 	<item drawable="metatrader4" />
 	<item drawable="metatrader5" />
@@ -5729,6 +5747,7 @@
 	<item drawable="padi" />
 	<item drawable="padlet" />
 	<item drawable="pagbank" />
+	<item drawable="paiement_mobile" />
 	<item drawable="paisa" />
 	<item drawable="palabre" />
 	<item drawable="palette_setups" />
@@ -6106,6 +6125,7 @@
 	<item drawable="pure_tuber" />
 	<item drawable="pure_writer" />
 	<item drawable="purrfect_cats" />
+	<item drawable="pro_entreprises_lcl" />
 	<item drawable="purpletv" />
 	<item drawable="push_for_better" />
 	<item drawable="pushbullet" />
