--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -285,4 +285,9 @@
         contribution="Testing"
         image=""
         link="" />
+    <contributor
+        name="Moritz"
+        contribution="Icons"
+        image=""
+        link="https://moritz.pm" />   
 </resources>
