--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -17,6 +17,7 @@
 	<item drawable="angry_birds_evolution" />
 	<item drawable="angry_birds_stella" />
 	<item drawable="anpaside" />
+	<item drawable="apple_music" />
 	<item drawable="applist_detector" />
 	<item drawable="appmonster" />
 	<item drawable="aritycalc" />
@@ -98,6 +99,7 @@
 	<item drawable="john_gba" />
 	<item drawable="jojoy" />
 	<item drawable="kakao_webtoon" />
+	<item drawable="kitchen_stories" />
 	<item drawable="lexus" />
 	<item drawable="libra" />
 	<item drawable="linktree" />
@@ -169,6 +171,7 @@
 	<item drawable="sony_ar_fun" />
 	<item drawable="sony_bokeh" />
 	<item drawable="sony_motion_shot" />
+	<item drawable="sophos_home" />
 	<item drawable="super_productivity" />
 	<item drawable="superimage" />
 	<item drawable="suunto" />
@@ -4441,6 +4444,7 @@
 	<item drawable="kippa" />
 	<item drawable="kiss_launcher" />
 	<item drawable="kitchenowl" />
+	<item drawable="kitchen_stories" />
 	<item drawable="kite" />
 	<item drawable="kitsu" />
 	<item drawable="kiwi_browser" />
@@ -6822,6 +6826,7 @@
 	<item drawable="sony_three_d_creator" />
 	<item drawable="sony_video" />
 	<item drawable="sonyliv" />
+	<item drawable="sophos_home" />
 	<item drawable="sophos_mobile_security" />
 	<item drawable="sophos_network_agent" />
 	<item drawable="sophos_secure_workspace" />
