--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -40,6 +40,7 @@
 	<item drawable="cataclysm_dda" />
 	<item drawable="cataclysm_dda_x" />
 	<item drawable="chess_clock" />
+	<item drawable="chess_dot_com" />
 	<item drawable="cineworld_cinemas" />
 	<item drawable="comviq" />
 	<item drawable="creativeapp" />
@@ -2714,6 +2715,7 @@
 	<item drawable="chemistry_x10" />
 	<item drawable="chess" />
 	<item drawable="chess_clock" />
+	<item drawable="chess_dot_com" />
 	<item drawable="chess_tempo" />
 	<item drawable="chessboard" />
 	<item drawable="chessis" />
