--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -1388,6 +1388,7 @@
 	<item component="ComponentInfo{com.att.mobilesecurity/com.att.mobilesecurity.ui.launcher.AttOneAppLoadDispatchActivity}" drawable="att_activearmor" />
 	<item component="ComponentInfo{com.att.mobilesecurity/com.lookout.appcoreui.ui.launcher.LoadDispatchActivity}" drawable="att_mobile_security" />
 	<item component="ComponentInfo{com.att.myWireless/com.att.myWireless.activity.login.SplashScreenActivity}" drawable="my_att" />
+	<item component="ComponentInfo{com.att.myWireless/com.att.myWireless.RNMainActivity}" drawable="my_att" />
 	<item component="ComponentInfo{com.att.myWireless/com.att.myWireless.ui.SplashScreenActivity}" drawable="my_att" />
 	<item component="ComponentInfo{com.att.personalcloud/com.att.personalcloud.gui.activities.SplashLogoActivity}" drawable="att_cloud" />
 	<item component="ComponentInfo{com.att.tv/com.att.mobile.dfw.activities.StartupActivity}" drawable="att_tv" />
