--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,17 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="antennapod" />
+	<item drawable="clicker_heroes" />
+	<item drawable="fancade" />
+	<item drawable="ocea_kwgt" />
+	<item drawable="samsung_penup" />
+	<item drawable="samsung_penup_alt_1" />
+	<item drawable="shadowsocks" />
+	<item drawable="shadowsocks_alt_1" />
+	<item drawable="shadowsocks_alt_2" />
+	<item drawable="unified_remote" />
+	<item drawable="vanilla_kwgt" />
 
 	<category title="Alts" />
 	<item drawable="_4pda_alt_1" />
@@ -70,6 +81,7 @@
 	<item drawable="chrome_canary_alt_1" />
 	<item drawable="chromium_alt_1" />
 	<item drawable="cibc_alt_1" />
+	<item drawable="clicker_heroes_alt_1" />
 	<item drawable="clickup_alt_1" />
 	<item drawable="clock_alt_1" />
 	<item drawable="cloudstream_alt_1" />
@@ -104,6 +116,7 @@
 	<item drawable="edem_rf_alt_1" />
 	<item drawable="exodus_alt_1" />
 	<item drawable="fastic_alt_1" />
+	<item drawable="fancade_alt_1" />
 	<item drawable="file_manager_alt_1" />
 	<item drawable="firefox_alt_1" />
 	<item drawable="firefox_alt_2" />
@@ -314,6 +327,7 @@
 	<item drawable="samsung_good_lock_alt_1" />
 	<item drawable="samsung_notes_alt_1" />
 	<item drawable="samsung_pay_alt_1" />
+	<item drawable="samsung_penup_alt_1" />
 	<item drawable="sber_bank_alt_1" />
 	<item drawable="sber_bank_alt_2" />
 	<item drawable="sber_eapteka_alt_1" />
@@ -326,6 +340,8 @@
 	<item drawable="sephora_alt_1" />
 	<item drawable="settings_alt_1" />
 	<item drawable="settings_alt_2" />
+	<item drawable="shadowsocks_alt_1" />
+	<item drawable="shadowsocks_alt_2" />
 	<item drawable="shakepay_alt_1" />
 	<item drawable="shelter_alt_1" />
 	<item drawable="shizuku_alt_1" />
@@ -713,6 +729,7 @@
 	<item drawable="twitter_alt_2" />
 	<item drawable="twitter_lite_alt_1" />
 	<item drawable="twitter_lite_alt_2" />
+	<item drawable="unified_remote_alt_1" />
 	<item drawable="up_banking_alt_1" />
 	<item drawable="vanced_manager_alt_1" />
 	<item drawable="vanced_microg_settings_alt_1" />
@@ -5648,7 +5665,6 @@
 	<item drawable="penny_mobil" />
 	<item drawable="pennyworth" />
 	<item drawable="pentobi" />
-	<item drawable="penup" />
 	<item drawable="peopay" />
 	<item drawable="people_first" />
 	<item drawable="pep" />
@@ -6288,6 +6304,7 @@
 	<item drawable="samsung_pay" />
 	<item drawable="samsung_pay_mini" />
 	<item drawable="samsung_pentastic" />
+	<item drawable="samsung_penup" />
 	<item drawable="samsung_quick_mesure" />
 	<item drawable="samsung_reminder" />
 	<item drawable="samsung_s_voice" />
