Adds entry into drawable.xml files.

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -3466,6 +3466,7 @@
 	<item drawable="flybuys" />
 	<item drawable="flycast" />
 	<item drawable="flym" />
+	<item drawable="flym_decsync" />
 	<item drawable="flynx" />
 	<item drawable="flyperlink" />
 	<item drawable="flytube" />
