Add contributor details

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -289,5 +289,10 @@
         name="Moritz"
         contribution="Icons"
         image=""
-        link="https://moritz.pm" />   
+        link="https://moritz.pm" />
+    <contributor
+        name="Luke Wong"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/148693"
+        link="https://github.com/hausofwong" />   
 </resources>
