--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -339,6 +339,7 @@
 	<item component="ComponentInfo{au.com.vodafone.mobile.gss/au.com.vodafone.mobile.gss.MyVodafone}" drawable="vodafone" />
 	<item component="ComponentInfo{au.com.yomojo.yomojo/com.inomma.yomojo.activities.LoginActivity}" drawable="yomojo" />
 	<item component="ComponentInfo{au.gov.ato.ATOTax/crc64d4b1f14aed59e235.SplashScreen}" drawable="ato" />
+	<item component="ComponentInfo{au.gov.ato.ATOTax/crc64d4b1f14aed59e235.MainActivity}" drawable="ato" />
 	<item component="ComponentInfo{au.gov.ato.mygovid.droid/au.gov.ato.myGovID.LaunchActivity}" drawable="mygovid" />
 	<item component="ComponentInfo{au.gov.bom.metview/au.gov.bom.metview.MainActivity}" drawable="weather" />
 	<item component="ComponentInfo{au.gov.bom.metview/com.zoontek.rnbootsplash.RNBootSplashActivity}" drawable="weather" />
@@ -8249,6 +8250,7 @@
 	<item component="ComponentInfo{com.woocommerce.android/com.woocommerce.android.ui.main.MainActivity}" drawable="woocommerce" />
 	<item component="ComponentInfo{com.woodforest/com.woodforest.MainActivity}" drawable="bank" />
 	<item component="ComponentInfo{com.woolworths.mobile/com.woolworthslimited.connect.splash.views.SplashActivity}" drawable="woolworths" />
+	<item component="ComponentInfo{com.woolworths/au.com.woolworths.android.onesite.Launcher}" drawable="woolworths" />
 	<item component="ComponentInfo{com.woolworths.rewards/au.com.woolworths.rewards.Launcher}" drawable="everyday_rewards" />
 	<item component="ComponentInfo{com.wordreference/com.wordreference.MainApp}" drawable="word_reference" />
 	<item component="ComponentInfo{com.wordwebsoftware.android.wordweb/com.wordwebsoftware.android.wordweb.activity.WordWebActivity}" drawable="wordweb" />
