--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11374,4 +11374,11 @@
 	<item component="ComponentInfo{pl.damianpiwowarski.adapticons/pl.damianpiwowarski.adapticons.MainActivity_}" drawable="adapticons" />
 	<item component="ComponentInfo{app.aawireless/app.aawireless.MainActivity}" drawable="aawireless" />
 	<item component="ComponentInfo{com.eightyeightgames.tenmillion/com.unity3d.player.UnityPlayerActivity}" drawable="_10000000" />
+	<item component="ComponentInfo{pdfreader.pdfviewer.officetool.pdfscanner/pdfreader.pdfviewer.officetool.pdfscanner.views.activities.SplashActivityUpdated}" drawable="pdf_reader" />
+	<item component="ComponentInfo{com.dbs.sg.posbmbanking/com.dbs.sg.digibank.ui.demo.SplashActivity}" drawable="bank" />
+	<item component="ComponentInfo{com.americanexpress.android.acctsvcs.mx/com.americanexpress.android.intl.app.view.activity.SplashInitializationActivity}" drawable="amex_mobile" />
+	<item component="ComponentInfo{com.jahertor.voicerecorder/com.jahertor.voicerecorder.views.MainActivity}" drawable="sound_recorder" />
+	<item component="ComponentInfo{iba.mobilbank/iba.mobilbank.utils.dynamicicons.GenericIconLauncherAlias}" drawable="bank" />
+	<item component="ComponentInfo{com.ebay.kijiji.ca/com.ebay.kijiji.ca.MainActivity}" drawable="kijiji" />
+	<item component="ComponentInfo{com.google.android.apps.messaging/com.google.android.apps.messaging.main.MainActivity}" drawable="sms_alt_3" />
 </resources>
