Add CamScanner icon, Fix icons and broken appfilters

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -8093,8 +8093,7 @@
 	<item component="ComponentInfo{com.vsco.cam/com.vsco.cam.navigation.NavigationBaseActivity}" drawable="vsco_cam" />
 	<item component="ComponentInfo{com.vsco.cam/com.vsco.cam.SplashActivity}" drawable="vsco_cam" />
 	<item component="ComponentInfo{com.vsct.vsc.mobile.horaireetresa.android/com.evoyageurs.invictus.flutter.MainActivity}" drawable="ouisncf" />
-	<item component="ComponentInfo{com.vsct.vsc.mobile.horaireetresa.android/com.vsct.vsc.mobile.horaireetresa.android.activity.SplashActivity}" drawable="ouisncf" />
-	<item component="ComponentInfo{com.vsct.vsc.mobile.horaireetresa.android/com.vsct.vsc.mobile.horaireetresa.android.activity.SplashActivity}" drawable="sncf_connect" />
+	<item component="ComponentInfo{com.vsct.vsc.mobile.horaireetresa.android/com.vsct.vsc.mobile.horaireetresa.android.activity.SplashActivity}" drawable="sncfconnect" />
 	<item component="ComponentInfo{com.vtosters.android/com.vtosters.android.VTIconDefault}" drawable="vtosters" />
 	<item component="ComponentInfo{com.vtosters.android/com.vtosters.android.VTIconVK}" drawable="vkontakte" />
 	<item component="ComponentInfo{com.vtosters.lite/com.vtosters.lite.id00}" drawable="vtosters" />
@@ -10513,12 +10512,12 @@
 	<item component="ComponentInfo{qijaz221.github.io.musicplayer/qijaz221.github.io.musicplayer.startup.SplashActivity}" drawable="eon_player" />
 	<item component="ComponentInfo{qrcodereader.barcodescanner.scan.qrscanner/qrcodereader.barcodescanner.scan.qrscanner.page.SplashActivity}" drawable="qr_code_reader" />
 	<item component="ComponentInfo{quebec.artm.chrono/quebec.artm.chrono.ui.main.MainActivity}" drawable="chrono" />
-	<item component="ComponentInfo{radiotime.player/radiotime.player.Main}" drawable="fm_radio" />
-	<item component="ComponentInfo{radiotime.player/radiotime.player.TuneInRadioPro}" drawable="fm_radio" />
-	<item component="ComponentInfo{radiotime.player/tunein.player.pro.Activity}" drawable="fm_radio" />
-	<item component="ComponentInfo{radiotime.player/tunein.player.pro.Splash}" drawable="fm_radio" />
-	<item component="ComponentInfo{radiotime.player/tunein.ui.activities.TuneInHomeActivity}" drawable="fm_radio" />
-	<item component="ComponentInfo{radiotime.player/tunein.ui.actvities.TuneInHomeActivity}" drawable="tune_in" />
+	<item component="ComponentInfo{radiotime.player/radiotime.player.Main}" drawable="tunein_radio" />
+	<item component="ComponentInfo{radiotime.player/radiotime.player.TuneInRadioPro}" drawable="tunein_radio" />
+	<item component="ComponentInfo{radiotime.player/tunein.player.pro.Activity}" drawable="tunein_radio" />
+	<item component="ComponentInfo{radiotime.player/tunein.player.pro.Splash}" drawable="tunein_radio" />
+	<item component="ComponentInfo{radiotime.player/tunein.ui.activities.TuneInHomeActivity}" drawable="tunein_radio" />
+	<item component="ComponentInfo{radiotime.player/tunein.ui.actvities.TuneInHomeActivity}" drawable="tunein_radio" />
 	<item component="ComponentInfo{rahmouni.neil.counters/rahmouni.neil.counters.MainActivity}" drawable="counters" />
 	<item component="ComponentInfo{rasel.lunar.launcher/rasel.lunar.launcher.LauncherActivity}" drawable="lunar_launcher" />
 	<item component="ComponentInfo{rc.appradio.android/com.radiocanada.audio.ui.main.DeepLinkActivity}" drawable="radio_canada_ohdio" />
@@ -11146,7 +11145,7 @@
 	<item component="ComponentInfo{com.YoStarJP.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
 	<item component="ComponentInfo{com.YoStarKR.Arknights/com.u8.sdk.U8UnityContext}" drawable="arknights" />
 	<item component="ComponentInfo{com.klab.lovelive.allstars/com.klab.lovelive.allstars.MainActivity}" drawable="love_liveas" />
-	<item component="ComponentInfo{jp.co.atm.smile/jp.co.atm.smile.MainActivity}" drawable="starlight" />
+	<item component="ComponentInfo{jp.co.atm.smile/jp.co.atm.smile.MainActivity}" drawable="revue_starlight_re_live" />
 	<item component="ComponentInfo{com.safeway.client.android.albertsons/com.safeway.mcommerce.android.SplashScreen}" drawable="albertsons" />
 	<item component="ComponentInfo{com.caju.employeeApp/com.caju.employeeApp.MainActivity}" drawable="caju" />
 	<item component="ComponentInfo{br.com.serasaexperian.consumidor/br.com.serasaexperian.consumidor.ui.view.onboarding.WelcomeActivity}" drawable="serasa" />
