--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -7654,6 +7654,7 @@
 	<item component="ComponentInfo{com.todoist/com.todoist.alias.HomeActivityLightAmethyst}" drawable="todoist_lightamethyst" />
 	<item component="ComponentInfo{com.todoist/com.todoist.alias.HomeActivityLightNoir}" drawable="todoist_lightnoir" />
 	<item component="ComponentInfo{com.todoist/com.todoist.alias.HomeActivityLightTodoist}" drawable="todoist_light" />
+	<item component="ComponentInfo{com.todoist/com.todoist.alias.HomeActivityNoir}" drawable="todoist_dark" />
 	<item component="ComponentInfo{com.todoist/com.todoist.alias.HomeActivityTangerine}" drawable="todoist_tangerine" />
 	<item component="ComponentInfo{com.todoist/com.todoist.alias.HomeActivityTodoist}" drawable="todoist" />
 	<item component="ComponentInfo{com.toggl.giskard/com.toggl.ui.MainActivity}" drawable="toggl_track" />
