fix Finnish MobilePay drawable name

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -9002,7 +9002,7 @@
 	<item component="ComponentInfo{eztools.calculator.photo.vault/eztools.calculator.photo.vault.modules.main.CalculatorActivity}" drawable="calculator" />
 	<item component="ComponentInfo{f.f.freezer/f.f.freezer.MainActivity}" drawable="freezer" />
 	<item component="ComponentInfo{fantasychallenge.euroleague.net/fantasychallenge.euroleague.net.MainActivity}" drawable="euroleague_fantasy_challenge" />
-	<item component="ComponentInfo{fi.danskebank.mobilepay/dk.danskebank.p2p.ui.login.LoginActivity}" drawable="bank" />
+	<item component="ComponentInfo{fi.danskebank.mobilepay/dk.danskebank.p2p.ui.login.LoginActivity}" drawable="mobile_pay" />
 	<item component="ComponentInfo{fi.digia.suomi112/fi.digia.suomi112.MainActivity}" drawable="_112_suomi" />
 	<item component="ComponentInfo{fi.hsl.app/fi.hsl.app.MainActivity}" drawable="hsl" />
 	<item component="ComponentInfo{fi.itella.posti.android/com.posti.arrow.ui.LaunchActivity}" drawable="omaposti" />
