Added LCL icons

--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -246,6 +246,11 @@
         image="https://avatars.githubusercontent.com/u/5287266"
         link="https://github.com/tony1661" />
     <contributor
+        name="Tripticon84"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/51379453"
+        link="https://github.com/Tripticon84" />
+    <contributor
         name="watson-nm"
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/57500106"
