icon rename: Notify -> Notify for Mi Band

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -5511,7 +5511,7 @@
 	<item drawable="nothing_recorder" />
 	<item drawable="nothing_x" />
 	<item drawable="notification_notes" />
-	<item drawable="notify" />
+	<item drawable="notify_for_mi_band" />
 	<item drawable="notin" />
 	<item drawable="notion" />
 	<item drawable="notisave" />
