Update Udemy icon to latest branding

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,6 +4,7 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
+	<item drawable="udemy" />
 	<item drawable="aaa_auto_club" />
 	<item drawable="aaa_mobile" />
 	<item drawable="acko" />
@@ -255,6 +256,7 @@
 	<item drawable="vanilla_kwgt" />
 
 	<category title="Alts" />
+	<item drawable="udemy_alt_1" />
 	<item drawable="car_parking_multiplayer_alt_1" />
 	<item drawable="disconnect_alt" />
 	<item drawable="lcl_mes_comptes_alt_1" />
