add missing lines/icons

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -256,6 +256,7 @@
 	<item drawable="vanilla_kwgt" />
 
 	<category title="Alts" />
+	<item drawable="wawa_alt_1" />
 	<item drawable="udemy_alt_1" />
 	<item drawable="car_parking_multiplayer_alt_1" />
 	<item drawable="disconnect_alt" />
@@ -296,6 +297,7 @@
 	<item drawable="amazon_alexa_alt_1" />
 	<item drawable="anova_alt_1" />
 	<item drawable="antennapod_alt_1" />
+	<item drawable="app_drawer_alt_1" />
 	<item drawable="app_drawer_alt_2" />
 	<item drawable="app_drawer_alt_3" />
 	<item drawable="app_drawer_alt_4" />
@@ -5142,7 +5144,6 @@
 	<item drawable="meteored_weather" />
 	<item drawable="metriport" />
 	<item drawable="metro_chile" />
-	<item drawable="metro_music_player" />
 	<item drawable="metrobank_online" />
 	<item drawable="metropolis" />
 	<item drawable="meu_tim" />
@@ -6825,6 +6826,33 @@
 	<item drawable="secuso_2048" />
 	<item drawable="secuso_minesweeper" />
 	<item drawable="secuso_notes" />
+	<item drawable="secuso_aktivpause_to_go" />
+	<item drawable="secuso_backup" />
+	<item drawable="secuso_boardgame_clock" />
+	<item drawable="secuso_circuit_training_exercises" />
+	<item drawable="secuso_dame" />
+	<item drawable="secuso_dice_game" />
+	<item drawable="secuso_dicer" />
+	<item drawable="secuso_finance_manager" />
+	<item drawable="secuso_food_tracker" />
+	<item drawable="secuso_interval_timer" />
+	<item drawable="secuso_ludo" />
+	<item drawable="secuso_memo_game" />
+	<item drawable="secuso_pain_diary" />
+	<item drawable="secuso_password_generator" />
+	<item drawable="secuso_pausing_healthily" />
+	<item drawable="secuso_pedometer" />
+	<item drawable="secuso_pin_mnemonic" />
+	<item drawable="secuso_qr_scanner" />
+	<item drawable="secuso_reckoning_skills" />
+	<item drawable="secuso_ruler" />
+	<item drawable="secuso_shopping_list" />
+	<item drawable="secuso_sketching" />
+	<item drawable="secuso_solitaire" />
+	<item drawable="secuso_sudoku" />
+	<item drawable="secuso_tape_measure" />
+	<item drawable="secuso_todo_list" />
+	<item drawable="secuso_torchlight" />
 	<item drawable="seek" />
 	<item drawable="seeker" />
 	<item drawable="seeking_alpha" />
