add icons not processed by the workflow

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11339,7 +11339,7 @@
 	<item component="ComponentInfo{com.waybefore.fastlikeafox/com.waybefore.fastlikeafox.AndroidLauncher}" drawable="fast_like_a_fox" />
 	<item component="ComponentInfo{com.appindustry.everywherelauncher/com.michaelflisar.everywherelauncher.ui.activitiesandfragments.MainActivity}" drawable="everywhere_launcher" />
 	<item component="ComponentInfo{com.appindustry.everywherelauncher.unlocker/fr.marvinlabs.unlocker.activity.UnlockerActivity}" drawable="everywhere_launcher" />
-	<item component="ComponentInfo{elementskwgt.kustom.pack/org.kustom.api.dashboard.DashboardActivity}" drawable="elements_kwgt" />
+	<item component="ComponentInfo{elementskwgt.kustom.pack/org.kustom.api.dashboard.DashboardActivity}" drawable="elements_kwgt_alt_1" />
 	<item component="ComponentInfo{org.easyrpg.player/org.easyrpg.player.MainActivity}" drawable="easyrpg" />
 	<item component="ComponentInfo{com.bethsoft.DOOMII/com.idsoftware.Doom.DoomActivity}" drawable="doom_2" />
 	<item component="ComponentInfo{com.bethsoft.DOOM/com.idsoftware.Doom.DoomActivity}" drawable="doom" />
@@ -11481,7 +11481,7 @@
 	<item component="ComponentInfo{ir.kazemcodes.infinityreader/org.ireader.app.MainActivity}" drawable="ireader" />
 	<item component="ComponentInfo{com.sofarsogood.incredibox/com.sofarsogood.incredibox.MainActivity}" drawable="incredibox" />
 	<item component="ComponentInfo{com.polywise.lucid/com.polywise.lucid.ui.screens.onboarding.OnboardingActivity}" drawable="imprint" />
-	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.main_screen.MainActivity}" drawable="image_resizer" />
+	<item component="ComponentInfo{ru.tech.imageresizershrinker/ru.tech.imageresizershrinker.main_screen.MainActivity}" drawable="image_resizer_shrinker" />
 	<item component="ComponentInfo{com.battlefun.c1game.na/com.epicgames.ue4.SplashActivity}" drawable="hyper_front" />
 	<item component="ComponentInfo{com.trovo.streamerapp/com.trovo.streamerapp.MainApplication}" drawable="htv" />
 	<item component="ComponentInfo{premium.gotube.adblock.utube/premium.gotube.adblock.utube.splash.SplashActivity}" drawable="gotube" />
@@ -11501,7 +11501,7 @@
 	<item component="ComponentInfo{com.porg.blocker/com.porg.blocker.MainActivity}" drawable="disconnect" />
 	<item component="ComponentInfo{deliriumkwgt.kustom.pack/org.kustom.api.dashboard.DashboardActivity}" drawable="delirium_kwgt" />
 	<item component="ComponentInfo{com.dashlane.authenticator/com.dashlane.authenticator.MainActivity}" drawable="dashlane_authenticator" />
-	<item component="ComponentInfo{com.kokoschka.michael.crypto/com.kokoschka.michael.crypto.ui.views.MainActivity}" drawable="crypto" />
+	<item component="ComponentInfo{com.kokoschka.michael.crypto/com.kokoschka.michael.crypto.ui.views.MainActivity}" drawable="crypto_encryption_tools" />
 	<item component="ComponentInfo{com.cricheroes.cricheroes.alpha/com.cricheroes.cricheroes.SplashActivity}" drawable="cricheroes" />
 	<item component="ComponentInfo{au.com.crazytel.crazyphone.android/cz.acrobits.softphone.LauncherAlias}" drawable="crazyphone" />
 	<item component="ComponentInfo{coves.kustom.pack/org.kustom.api.dashboard.DashboardActivity}" drawable="coves_kwgt" />
