--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -4,7 +4,8 @@
 	<!--Please avoid automatically sorting categories to keep the current order in place-->
 
 	<category title="New" />
-	<item drawable="udemy" />
+	<item drawable="image_resizer_shrinker" />
+	<item drawable="crypto_encryption_tools" />
 	<item drawable="aaa_auto_club" />
 	<item drawable="aaa_mobile" />
 	<item drawable="acko" />
@@ -256,6 +257,7 @@
 	<item drawable="vanilla_kwgt" />
 
 	<category title="Alts" />
+	<item drawable="elements_kwgt_alt_1" />
 	<item drawable="wawa_alt_1" />
 	<item drawable="udemy_alt_1" />
 	<item drawable="car_parking_multiplayer_alt_1" />
@@ -3079,6 +3081,7 @@
 	<item drawable="crush_crush" />
 	<item drawable="crypto" />
 	<item drawable="crypto_challenge" />
+	<item drawable="crypto_encryption_tools" />
 	<item drawable="cryptocam" />
 	<item drawable="cryptocom" />
 	<item drawable="cryptomator" />
@@ -4380,6 +4383,7 @@
 	<item drawable="il_fatto_quotidiano" />
 	<item drawable="il_post" />
 	<item drawable="image_resizer" />
+	<item drawable="image_resizer_shrinker" />
 	<item drawable="imagepipe" />
 	<item drawable="imagin" />
 	<item drawable="imaging_edge" />
