--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -3289,7 +3289,7 @@
 	<item component="ComponentInfo{com.goodreads/com.goodreads.android.activity.MainActivity}" drawable="goodreads" />
 	<item component="ComponentInfo{com.goodreads/com.goodreads.kindle.ui.activity.SplashActivity}" drawable="goodreads" />
 	<item component="ComponentInfo{com.goodwy.audiobooklite/com.goodwy.audiobooklite.features.MainActivity}" drawable="playbook_lite" />
-	<item component="ComponentInfo{com.goodwy.audiobooklite/voice.app.features.MainActivity}" drawable="playbooks_lite" />
+	<item component="ComponentInfo{com.goodwy.audiobooklite/voice.app.features.MainActivity}" drawable="playbook_lite" />
 	<item component="ComponentInfo{com.google.android.accessibility.soundamplifier/com.google.android.accessibility.soundamplifier.ui.SoundAmplifierSettingActivity}" drawable="google_sound_amplifier" />
 	<item component="ComponentInfo{com.google.android.apps.access.wifi.consumer/com.google.android.apps.access.wifi.consumer.app.MainActivity}" drawable="google_wifi" />
 	<item component="ComponentInfo{com.google.android.apps.accessibility.auditor/com.google.android.apps.accessibility.auditor.ui.MainActivity}" drawable="google_accessibility_scanner" />
@@ -4004,9 +4004,9 @@
 	<item component="ComponentInfo{com.intesis.intesishome/com.intesis.intesishome.activities.MainActivity}" drawable="intesis_ac_cloud" />
 	<item component="ComponentInfo{com.intrepidlogic.calibrecloud/com.intrepidlogic.calibrecloud.MainActivity}" drawable="calibre_cloud" />
 	<item component="ComponentInfo{com.intsig.BCRLite/com.intsig.camcard.BcrFirstLaunchGuide}" drawable="camcard" />
-	<item component="ComponentInfo{com.intsig.camscanner/com.intsig.camscanner.launcher.WelcomeDefaultActivity}" drawable="cam__scanner" />
-	<item component="ComponentInfo{com.intsig.camscanner/com.intsig.camscanner.mainmenu.mainactivity.MainActivity}" drawable="cam__scanner" />
-	<item component="ComponentInfo{com.intsig.camscanner/com.intsig.camscanner.WelcomeActivity}" drawable="cam__scanner" />
+	<item component="ComponentInfo{com.intsig.camscanner/com.intsig.camscanner.launcher.WelcomeDefaultActivity}" drawable="cam_scanner" />
+	<item component="ComponentInfo{com.intsig.camscanner/com.intsig.camscanner.mainmenu.mainactivity.MainActivity}" drawable="cam_scanner" />
+	<item component="ComponentInfo{com.intsig.camscanner/com.intsig.camscanner.WelcomeActivity}" drawable="cam_scanner" />
 	<item component="ComponentInfo{com.intsig.cspdf/com.intsig.csmatrix.welcome.WelcomeActivity}" drawable="cam_scanner_pdf" />
 	<item component="ComponentInfo{com.investvoyager/com.investvoyager.ui.activity.main.MainActivity}" drawable="voyager" />
 	<item component="ComponentInfo{com.investvoyager/com.investvoyager.ui.AuthActivity}" drawable="voyager" />
@@ -6268,7 +6268,7 @@
 	<item component="ComponentInfo{com.sec.android.sidesync30/com.sec.android.sidesync30.ui.SideSyncActivity}" drawable="samsung_sidesync" />
 	<item component="ComponentInfo{com.sec.android.usermanual/com.sec.android.usermanual.UserManualActivity}" drawable="samsung_user_manual" />
 	<item component="ComponentInfo{com.sec.app.samsungprintservice/com.sec.mobileprint.printservice.plugin.ui.launcher.view.LauncherActivity}" drawable="printer" />
-	<item component="ComponentInfo{com.sec.penup/com.sec.penup.ui.SplashActivity}" drawable="penup" />
+	<item component="ComponentInfo{com.sec.penup/com.sec.penup.ui.SplashActivity}" drawable="samsung_penup" />
 	<item component="ComponentInfo{com.sec.print.mobileprint/com.sec.print.mobileprint.ui.IntroActivity}" drawable="samsung_mobile_print" />
 	<item component="ComponentInfo{com.seccia.desire/com.unity3d.player.UnityPlayerActivity}" drawable="desire" />
 	<item component="ComponentInfo{com.secretexit.dismount/com.secretexit.smoke.SmokeActivity}" drawable="stair_dismount" />
