move atmosphere to alt_1

--- a/app/src/main/res/xml/drawable.xml
+++ b/app/src/main/res/xml/drawable.xml
@@ -40,6 +40,7 @@
 	<item drawable="artstation_alt_1" />
 	<item drawable="artstation_alt_2" />
 	<item drawable="asana_alt_1" />
+	<item drawable="atmosphere_alt_1" />
 	<item drawable="audacy_alt_1" />
 	<item drawable="aurora_droid_alt_1" />
 	<item drawable="auxio_alt_1" />
