Fix g2a icon link

--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -11612,4 +11612,5 @@
 	<item component="ComponentInfo{com.peakpocketstudios.atmospherebinauraltherapy/com.peakpocketstudios.atmospherebinauraltherapy.activities.Splash}" drawable="atmosphere_binaural_therapy" />
 	<item component="ComponentInfo{com.amazon.workspaces/crc64047a0d770568f918.MainActivity}" drawable="amazon_workspaces" />
 	<item component="ComponentInfo{com.slipstream.accuradio/com.slipstream.accuradio.ui.NavigatorActivity}" drawable="accuradio" />
+	<item component="ComponentInfo{com.g2a.marketplace/com.g2a.marketplace.main.MainActivity}" drawable="g_two_a" />
 </resources>
