--- a/app/src/main/res/xml/appfilter.xml
+++ b/app/src/main/res/xml/appfilter.xml
@@ -7555,6 +7555,7 @@
 	<item component="ComponentInfo{com.thegrizzlylabs.geniusscan.free/com.thegrizzlylabs.geniusscan.ui.welcome.WelcomeActivity}" drawable="genius_scan" />
 	<item component="ComponentInfo{com.thehomedepot/com.thehomedepot.startup.activities.StartupActivity}" drawable="the_home_depot" />
 	<item component="ComponentInfo{com.thehomedepotca/com.thehomedepotca.app.splash.activity.SplashActivity}" drawable="the_home_depot" />
+	<item component="ComponentInfo{com.thehomedepotca/com.thehomedepotca.view.splash.activity.SplashActivity}" drawable="the_home_depot" />
 	<item component="ComponentInfo{com.thehungrywasp.iamsober/com.thehungrywasp.iamsober.MainActivity}" drawable="i_am_sober" />
 	<item component="ComponentInfo{com.themausoft.wpsapp/com.themausoft.wpsapp.SplashActivity}" drawable="wpsapp" />
 	<item component="ComponentInfo{com.themboy.mirror/com.themboy.mirror.Mirror}" drawable="mirror" />
