--- a/app/src/main/res/xml/contributors.xml
+++ b/app/src/main/res/xml/contributors.xml
@@ -300,4 +300,9 @@
         contribution="Icons"
         image="https://avatars.githubusercontent.com/u/148693"
         link="https://github.com/hausofwong" />   
+    <contributor
+        name="Heruvetica"
+        contribution="Icons"
+        image="https://avatars.githubusercontent.com/u/130598002"
+        link="https://github.com/Heruvetica" /> 
 </resources>
